添加返回头部

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>blog</title>
     <style>
+      html{
+        height: 100%;
+        overflow: hidden;
+      }
       body{
+        height: 100%;
         margin: 0;
       }
     </style>
